Week2/Day2/examples/def_arg_overload/def_arg_overload.cpp

void myoverload(int x, int y = 4) {}
void myoverload(int x) {}

int main(void) {
    myoverload(2, 7);
    // myoverload(2);  // error: call to 'myoverload' is ambiguous
}

